2011-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Update Milena tests w.r.t. the new version of lena.pgm.

	* tests/linear/log.cc: Update references values.

2011-05-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/io/dicom/load.hh: Fix invalid data while loading large
	image.

2010-12-10  Roland Levillain  <roland@lrde.epita.fr>

	Ensure non implemented reconstructions on sets abort at run time.

	* mln/morpho/reconstruction/by_dilation/union_find.hh,
	* mln/morpho/reconstruction/by_erosion/union_find.hh
	(union_find_dispatch(image::kind::logic, Image, Image, Neighborhood)):
	Here.
	* tests/morpho/reconstruction/by_dilation/union_find.cc,
	* tests/morpho/reconstruction/by_erosion/union_find.cc:
	Rename as...
	* tests/morpho/reconstruction/by_dilation/union_find_on_functions.cc,
	* tests/morpho/reconstruction/by_erosion/union_find_on_functions.cc:
	...these.
	* tests/morpho/reconstruction/by_dilation/union_find_on_sets.cc,
	* tests/morpho/reconstruction/by_erosion/union_find_on_sets.cc:
	New tests.
	* tests/morpho/reconstruction/by_dilation/Makefile.am,
	* tests/morpho/reconstruction/by_erosion/Makefile.am:
	Adjust.
	(check_PROGRAMS): Add union_find_on_sets.
	(union_find_on_sets_SOURCES): New.
	(XFAIL_TESTS): New.  Add union_find_on_sets.

2011-05-20  Thierry GERAUD  <thierry.geraud@lrde.epita.fr>

	* img/lena.pgm: Replace by official version;
	see http://www.ece.rice.edu/~wakin/images/

2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Address some errors reported by clang.

	* mln/data/fill.hh (mln::data::internal::fill_dispatch): Move this
	function after the routines it calls.

2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Address clang's warnings.

	* mln/algebra/h_vec.hh,
	* mln/core/image/dmorph/sub_image.hh,
	* mln/core/internal/pixel_impl.hh,
	* mln/core/site_set/box.hh,
	* mln/core/site_set/p_array.hh,
	* mln/metal/vec.hh,
	* mln/pw/internal/image_base.hh,
	* mln/topo/adj_higher_face_iter.hh,
	* mln/topo/adj_lower_face_iter.hh,