@@ -1,3 +1,13 @@
+2011-10-04  Roland Levillain  <roland@lrde.epita.fr>
+
+	Handle the case of filling an empty border.
+
+	* mln/border/fill.hh (mln::border::impl::fill_size_1): Here.
+	Aesthetic changes.
+	* tests/border/fill_0.cc: New test.
+	* tests/border/Makefile.am (check_PROGRAMS): Add fill_0.
+	(fill_0_SOURCES): New.
+
 2011-09-15  Roland Levillain  <roland@lrde.epita.fr>
 
 	Update Milena tests w.r.t. the new version of lena.pgm.
